# CV_Geometry

./: README.md
direct_method/: CMakeLists.txt
direct_method/src/: dierct_sparse.cpp  direct_semidense.cpp
eigen_geometry/: CMakeLists.txt
eigen_geometry/src/: eigenMatrix.cpp  test.cpp  useGeometry.cpp
epipolar_constraint/: CMakeLists.txt
epipolar_constraint/src/: .pose_estimation_2d2d.cpp.swo  .pose_estimation_2d2d.cpp.swp  pose_estimation_2d2d.cpp  triangulation.cpp
feature_extraction/: CMakeLists.txt
icp_ba/: CMakeLists.txt
icp_ba/src/: pose_estimation_3d3d.cpp
img_operate/: CMakeLists.txt  img_operate.cpp
lk_optical_flow/: CMakeLists.txt
lk_optical_flow/src/: lk.cpp
pnp_ba/: CMakeLists.txt
pnp_ba/src/: pose_estimation_3d2d.cpp
point_cloud_stitching/: CMakeLists.txt
point_cloud_stitching/src/: joinMap.cpp
